Changes
=======

0.7.0 (2022- )
------------------
- new bc2pg Python module/function
    + general purpose loading tool
    + output table column types and comments are as specified in BC Data Catalogue API
    + data loads are via sqlalchemy/geopandas
    + all features are promoted to multipart
    + BC Albers only, no re-projection support
- updated bc2pg command line tool
    + uses new bc2pg Python function (no longer an ogr2ogr wrapper)
    + fid option renamed to primary_key
    + options removed: bounds,bounds_crs,max_workers,dim,append,promote_to_multi,makevalid

0.6.3 (2022-06-08)
------------------
- add --max_workers option to bcdata cat
- improve logging with bcdata cat

0.6.2 (2022-06-08)
------------------
- fix bc2pg append mode and primary key handling (#104)
- bc2pg --append now requires --fid
- add bc2pg tests (#43)
- require local test database for running tests

0.6.1 (2022-04-26)
------------------
- enable configuration of cache file location via $BCDATA_CACHE environment variable (#99)

0.6.0 (2022-04-26)
------------------
- dem - add option to align downloaded tiff to BC default (#97)
- remove bcgw object name shell completion (#98)

0.5.1 (2021-11-25)
------------------
- bc2pg - remove non-functional option to specify geom type on load, revert to --promote_to_multi (#92)

0.5.0 (2021-11-25)
------------------
- bc2pg - add option to validate on load (#91)
- bc2pg - add option to specify geometry type on load (#92)
- bump click version requirement (#94)

0.4.5 (2021-04-06)
------------------
- fix outdated setup.py (#88)

0.4.4 (2021-04-03)
------------------
- track most recent date a table is downloaded to postgres via bc2pg with `public.bcdata` (#86)
- cleanup temp tables on bail (#73)
- remove pgdata dependency and use psycopg2 built in string methods (#87)

0.4.3 (2020-11-10)
------------------
- make dataset name arguments case insensitive
- default max_workers to 2 in functions outside of CLI